--- a/docs/_sass/minima.scss
+++ b/docs/_sass/minima.scss
@@ -269,7 +269,7 @@ table {
     border: 1px solid $table-header-border;
   }
   td {
-    align: top;
+    vertical-align: top;
     border: 1px solid $table-border-color;
   }
 
